# casa_sim

./: .gitignore  CLAUDE.md  README.md  convert_scubed.py  pixi.toml  pyproject.toml  pytest.ini  scubed_sources_test.yaml  scubed_test.yaml  setup.sh  simulate.py
.github/workflows/: ci.yml
casa_sim/: config.py  corpus.py  observation.py  observatory.py  patchify.py  predict.py  sanity.py  simulate.py  skymodel.py
casa_sim/config/: __init__.py  dataclasses.py  parsing.py  routing.py  validation.py
casa_sim/skymodel/: __init__.py  component_list.py  core.py  faraday.py  morphology_field.py  morphology_templates.py  spectral.py  trecs.py  utils.py
sim_single_source_inline.ms.flagversions/: FLAG_VERSION_LIST
sim_single_source_inline.ms.flagversions/flags.flagdata_1/: table.f0  table.f1
sim_single_source_inline_sanity.mask/: table.f0
sim_single_source_inline_sanity.mask/logtable/: table.f0
tests/: conftest.py  run_all.py  test_bug_regression.py  test_config.py  test_corpus_mix.py  test_morphology.py  test_patchify.py
tests/configs/: corpus_mix_vla_c_lband.yaml  faraday.yaml  minimal_iquv_faraday.yaml  minimal_stokes_i.yaml  multi_source_inline.yaml  scubed_fullpol.yaml  single_source_inline.yaml  sources_file_test.yaml  sweep_noise.yaml  trecs_vla_lband_1_2GHz.yaml  vla_3c286.yaml  vla_basic.yaml
tests/integration/: test_3c286.py  test_faraday.py  test_skymodel_numerics.py  test_sweep.py  test_tclean_spw_isolation.py  test_vla_basic.py
tools/: dirty_confirm.py  fetch_trecs.py  full_dist_model_render.py  generate_corpus.py  smoketest_corpus.py
(+9 files in other folders)
